alteração das cores do site e design do form

--- a/final/index.html
+++ b/final/index.html
@@ -18,9 +18,9 @@
       <div class="nav__container">
         <h3>ELO NEWS</h3>
         <ul class="nav_items">
-          <li><a href="#" class="nav_item">HOME</a></li>
-          <li><a href="#" class="nav_item">NOTICIAS</a></li>
-          <li><a href="#" class="nav_item">CONTATO</a></li>
+          <li><a href="#" class="nav_item">Inicio</a></li>
+          <li><a href="#" class="nav_item">Noticias</a></li>
+          <li><a href="#" class="nav_item">Blog</a></li>
         </ul>
       </div>
       <div class="content__container">
@@ -83,33 +83,28 @@
             pessoas, não é uma boa ideia”, finaliza Mantovani.</p
           >
         </div>
-        <div class="form__container">
-          <h2>Surgiu alguma dúvida?</h2>
-          <form>
-            <label>Nome</label>
-            <input
-              placeholder="Nome completo"
-              name="name"
-              type="text"
-              required
-            />
-            <label>E-mail</label>
-            <input
-              placeholder="Seu melhor e-mail"
-              name="email"
-              type="email"
-              required
-            />
-            <label>Message</label>
-            <input
-              placeholder="Sua dúvida..."
-              name="question"
-              type="text"
-              required
-            />
-            <button class="form_button">Enviar</button>
-          </form>
-        </div>
+      </div>
+      <div class="form__container">
+        <h2>Surgiu alguma dúvida?</h2>
+        <form>
+          <label>Nome</label>
+          <input placeholder="Nome completo" name="name" type="text" required />
+          <label>E-mail</label>
+          <input
+            placeholder="Seu melhor e-mail"
+            name="email"
+            type="email"
+            required
+          />
+          <label>Mensagem</label>
+          <input
+            placeholder="Sua dúvida..."
+            name="question"
+            type="text"
+            required
+          />
+          <button class="form_button">Enviar</button>
+        </form>
       </div>
     </div>
   </body>
