autor da noticia, linear gradient

--- a/final/index.html
+++ b/final/index.html
@@ -29,6 +29,16 @@
             >Brasileiros querem trabalhar home office nos dias de jogos da
             seleção</h1
           >
+          <div class="author__container">
+            <div class="author_img">
+              <img src="./imgs/avatar.jpg" alt="face of a man" />
+            </div>
+            <div class="author_description">
+              <h4>Ricardo Souza</h4>
+              <p>14:37 10/12/2022</p>
+              <p>Jornalista pela UFG</p>
+            </div>
+          </div>
           <div class="title_img__wrapper">
             <img
               class="title_img"
